--- a/templates/index_en.html
+++ b/templates/index_en.html
@@ -184,12 +184,7 @@
                             <li>
                                 <p class="font-weight-bold text-uppercase py-4">High quality and Diverse Colours</p>
                             </li>
-                            <li class="list-inline-item">
-                                <a href="#" class="btn btn-unique btn-lg btn-rounded mr-0">View all items</a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#" class="btn btn-cyan btn-lg btn-rounded ml-0" data-toggle="modal" data-target="#modalContactForm">Ask us a question</a>
-                            </li>
+
                         </ul>
                     </div>
                 </div>
@@ -425,7 +420,7 @@
                 <hr class="w-100 clearfix d-md-none ">
 
                 <!-- Grid column -->
-                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 ">
+                <!-- <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3 ">
                     <h6 class="text-uppercase mb-4 font-weight-bold ">Links group 1</h6>
                     <p>
                         <a href="#! ">Link 1</a>
@@ -439,7 +434,7 @@
                     <p>
                         <a href="#! ">Link 4 </a>
                     </p>
-                </div>
+                </div> -->
                 <!-- Grid column -->
 
                 <hr class="w-100 clearfix d-md-none ">
