--- a/templates/index.html
+++ b/templates/index.html
@@ -487,6 +487,22 @@
                 </div>
                 <!-- Card Regular -->
 
+                <div class="container " style="margin-top:5% ; margin-bottom: 5% ">
+                    <!-- Jumbotron -->
+                    <div class="card card-image z-depth-5 rounded " style="background-image: url({% static 'img/archive.png' %});; ">
+                        <div class="text-white text-center rgba-stylish-strong py-5 px-4 ">
+                            <div class="py-5 ">
+
+                                <!-- Content -->
+                                <h2 class="card-title h2 my-4 py-2 ">آرشیو مطالب</h2>
+                                <a href="/archive " class="btn aqua-gradient btn-rounded "><i class="fas fa-archive left "></i> مشاهده آرشیو</a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Jumbotron -->
+                </div>
+
             </section>
         </div>
     </main>
@@ -541,12 +557,12 @@
                     </p>
 
                     <p>
-                        <a data-toggle="modal " data-target="#fullHeightModalRight ">
+                        <a data-toggle="modal" data-target="#fullHeightModalRight ">
                         کارخانه و دفتر مرکزی
                     </a>
                     </p>
                     <p>
-                        <a data-toggle="modal " data-target="#fullHeightModalRight1 ">
+                        <a data-toggle="modal" data-target="#fullHeightModalRight1 ">
                         مرکز پخش
                     </a>
                     </p>
