--- a/templates/acleryc.html
+++ b/templates/acleryc.html
@@ -271,7 +271,7 @@
                         وسیعی از جلوه های تصویری را ارائه می دهد. .</p>
                     <p style="float:right;text-align:right">اکریلیک پارس را می توان همچون رنگ روغن نیز استفاده کرد . با اضافه کردن لایه ها و حجم رنگ در مرحله بعدی توسط کاردک یا قلمو سطوح زخیم و برجسته را ایجاد کرد. بسته بندیهای اکریلیک پارس شامل: بسته های 6 - 12 - 24 در حجم 21 میل بسته های
                         6 و 12 در حجم 37 میل و اندازهای 75 میل و 200 تکی 250 میل و 500 میل و 1000 میل موجود می باشد.</p>
-                    <p style="float: right;text-align:right">نکته قابل توجه که اکریلیک پارس را از دیگر رقبا متمایز می کند خصوصیات ماندگاری و ثبات رنگی بالا در برابر تغقییرات جوی بوده که باعث تولید رنگهای هنری مختص نقاشیهای دیواری در سطوح بزرگ را شامل می شود. </p>
+                    <p style="float: right;text-align:right">نکته قابل توجه که اکریلیک پارس را از دیگر رقبا متمایز می کند خصوصیات ماندگاری و ثبات رنگی بالا در برابر تغییرات جوی بوده که باعث تولید رنگهای هنری مختص نقاشیهای دیواری در سطوح بزرگ را شامل می شود. </p>
                     <a href="{% static 'img/unnamed.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/unnamed.jpg' %}"></a>
 
 
