--- a/templates/aclerycen.html
+++ b/templates/aclerycen.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 
 <head>
     {% load static %}
@@ -10,80 +10,58 @@
     <link href="{% static 'css/all.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static  'css/custom.css' %}" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
-    <title>Giresh</title>
+    <title>گیرش</title>
 </head>
 
-<body>
+<body style="font-family: 'Vazir FD' ">
     <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.js' %}"></script>
     <script src="{% static 'js/mdb.js' %}"></script>
     <style>
         /* Navigation*/
-        
+
         .scrolling-navbar {
             transition: background .5s ease-in-out, padding .5s ease-in-out;
         }
-        
+
         .top-nav-collapse {
-            background-color: #667490 !important;
+            background-color: #667490!important;
         }
-        
+
         .navbar:not(.top-nav-collapse) {
             background: transparent!important;
         }
-        
+
         footer.page-footer {
-            background-color: #667490;
+            background-color: #667490 !important;
         }
-        
+
         @media only screen and (max-width: 768px) {
             .navbar {
-                background-color: #667490;
+                background-color: #667490 !important;
             }
         }
         /* Necessary for full page carousel*/
-        
+
         html,
         body,
         .view {
             height: 100%;
         }
         /* Carousel*/
-        
+
         .carousel,
         .carousel-item,
         .carousel-item.active {
             height: 100%;
         }
-        
+
         .carousel-inner {
             height: 100%;
         }
-        
-        .carousel-item:nth-child(1) {
-            background-image: url({% static 'img/2.jpg' %});
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-        }
-        
-        .carousel-item:nth-child(2) {
-            background-image: url({% static 'img/3.jpg' %});
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-        }
-        
-        .carousel-item:nth-child(3) {
-            background-image: url({% static 'img/s.jpg' %});
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-        }
     </style>
-    <!--Navbar-->
-    <nav class="navbar  navbar-expand-lg navbar-dark stylish-color-dark fixed-top scrolling-navbar">
+<nav class="navbar  navbar-expand-lg navbar-dark stylish-color-dark fixed-top scrolling-navbar">
 
 
         <a class="navbar-brand order-md-first" href="#">Giresh</a>
@@ -115,7 +93,7 @@
             <i class="fas fa-globe"> FA</i>
         </a>
     </nav>
-    <div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header text-center">
@@ -156,11 +134,7 @@
             </div>
         </div>
     </div>
-
-    <!-- Modal For Distribution center -->
-
-
-    <div class="modal fade left" id="fullHeightModalRight" style="float: left ; text-align: left" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade left" id="fullHeightModalRight" style="float: left ; text-align: left" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
         <!-- Add class .modal-full-height and then add class .modal-right (or other classes from list above) to set a position to the modal -->
         <div class="modal-dialog modal-full-height modal-left" role="document">
@@ -294,7 +268,7 @@
                                 <p class="font-weight-bold text-uppercase py-4" style="color:#007E33">Best of best gathered here</p>
                             </li>
                             <li>
-                               <a href="/govashen " class="btn purple-gradient btn-rounded ">View Products</a>
+                               <a href="/govash " class="btn purple-gradient btn-rounded ">View Products</a>
                             </li>
                         </ul>
                     </div>
@@ -339,159 +313,29 @@
         </a>
         <!--/.Controls-->
     </div>
-    <!--/.Carousel Wrapper-->
-    <main>
-        <div>
-            <section>
-                <h1 class="text-center font-up font-bold mt-5 mb-3 pt-5 wow fadeIn animated heartBeat " data-wow-delay="0.2s">View all products</h1>
+<main>
+    <section>
+        <p>
+Giresh Company has a 30 years record of the production of artistic colors and produces a complete set of artistic colors required by artists. in order to possess extraordinary quality, Pars products always have the approval and trust of artists in different age groups and different needs.        </p>
+        <p>
 
-                <!--Section description-->
-                <p class="text-center font-up pb-5 mb-4 font-bold wow fadeIn" data-wow-delay="0.2s">View our services</p>
-                <div class="row text-center mb-2  px-3 ">
+The company has dealt with a wide range of acrylic paint as one of the leading producers to produce acrylic paint. acrylic paint is applicable with colored variety on surfaces with different textures and tissues, and presents everything that a painter expects of acrylic paint.</p>
+        <p>
+Very high resistance to light, pure pigments and colour stability, dominance, high brightness and also good combination of color drying and leaving transparent layers of Pars acrylic. The use of bark makes many concessions easily diluted with diluted water and then freeze and water proof.        </p>
+        <p>
+It is possible to put different layers of color together without compromising the existence of layers of color. It affects all types of surfaces such as: canvas, cardboard, fabric, wood, pottery, pottery, and provides a range of visual effects        </p>
+        <p>
+Acrylic can be used as well as oil. With the addition of layers and the volume of color in the next step, we created the large and prominent surfaces. پارس acrylic packaging includes: 6 - 12 - 24 packets in the volume 21 mils of packets 6 and 12 in volume of 37 / 75 mils and 200 individual mils and 500 mils per volume.        </p>
+        <p>
+            The pars can be easily used in the airbrush if it is thick with water. The high concentration of the seeds leads to a glowing surface.
+        </p>
+        <p>
+The striking point that distinguishes Persia from other competitors is the long - lasting properties and high - colour consistency against atmospheric changes that make the production of artistic colors specific to wall paintings at large surfaces.        </p>
+                    <a href="{% static 'img/unnamed.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/unnamed.jpg' %}"></a>
 
-
-                    <div class="col-lg-4 col-md-12 pb-5 wow fadeIn  ">
-                        <!-- Card Wider -->
-                        <div class="card card-cascade" style="max-height: 700px;max-width: 700px;">
-
-                            <!-- Card image -->
-                            <div class="view view-cascade overlay ">
-                                <img class="card-img-top img-responsive " style="max-height: 100%;" src="{% static 'img/ramadan.jpg' %} " alt="Card image cap ">
-                                <a href="#! ">
-                                    <div class="mask rgba-white-slight "></div>
-                                </a>
-
-
-                            </div>
-                            <div class="card-body card-body-cascade text-center ">
-                                <h4 class="card-title "><strong>Ramadan Mubarak</strong></h4>
-                                <!-- Subtitle -->
-
-                                <!-- Text -->
-                                <p class="card-text font-weight-bold  "> Ramadan takes you on a spiritual journey </br> that ends right at the door of Allah </br>where dwells endless mercy and immeasurable happiness.</br> Ramadan Mubarak to you!</p>
-
-
-
-
-
-                            </div>
-
-
-
-                            <!-- Card content -->
-
-                        </div>
-
-                    </div>
-
-
-
-                    <div class="col-lg-4 col-md-12 pb-5 wow fadeIn ">
-                        <!-- Card Wider -->
-                        <div class="card card-cascade " style="max-height: 700px;max-width: 700px; ">
-
-                            <!-- Card image -->
-                            <div class="view view-cascade overlay ">
-                                <img class="card-img-top img-responsive " style="max-height: 100%; " src="{% static 'img/s.jpg' %} " alt="Card image cap ">
-                                <a href="#! ">
-                                    <div class="mask rgba-white-slight "></div>
-                                </a>
-                            </div>
-
-                            <!-- Card content -->
-                            <div class="card-body card-body-cascade text-center ">
-
-                                <!-- Title -->
-                                <div class="card-body card-body-cascade text-center ">
-
-                                    <!-- Title -->
-                                    <h4 class="card-title "><strong>Diverse and best Quality Gouaches</strong></h4>
-                                    <!-- Subtitle -->
-
-                                    <!-- Text -->
-                                    <p class="card-text ">Best quality</p>
-
-                                    <a class="btn blue-gradient btn-rounded " href="/gouacheen">View Products</a>
-
-
-
-
-                                </div>
-
-
-
-
-                            </div>
-
-                        </div>
-                    </div>
-                    <!-- Card Wider -->
-
-                    <!-- Card Narrower -->
-                    <div class="col-lg-4 col-md-12 pb-5 wow fadeIn ">
-                        <!-- Card Wider -->
-                    <div class="card card-cascade " style="max-height: 675px;max-width: 675px;">
-
-                            <!-- Card image -->
-                            <div class="view view-cascade overlay ">
-                                <img class="card-img-top img-responsive " src="{% static 'img/unnamed.jpg' %} " alt="Card image cap ">
-                                <a href="">
-                                    <div class="mask rgba-white-slight "></div>
-                                </a>
-                            </div>
-
-                            <!-- Card content -->
-                            <div class="card-body card-body-cascade text-center ">
-
-                                <!-- Title -->
-
-                                <!-- Title -->
-                                <h4 class="card-title "><strong>Best Quality and Diverse Gouaches</strong></h4>
-                                <!-- Subtitle -->
-
-                                <!-- Text -->
-                                <p class="card-text ">Best quality</p>
-
-                                <a class="btn peach-gradient btn-rounded " href="/aclerycen">View Products</a>
-
-
-
-
-
-                            </div>
-
-                        </div>
-                    </div>
-                    <!-- Card Narrower -->
-
-                    <!-- Card Regular -->
-
-                    <!-- Card Regular -->
-                </div>
-                <div class="container " style="margin-top:5% ; margin-bottom: 5% ">
-                    <!-- Jumbotron -->
-                    <div class="card card-image " style="background-image: url({% static 'img/2.jpg' %}); ">
-                        <div class="text-white text-center rgba-stylish-strong py-5 px-4 ">
-                            <div class="py-5 ">
-
-                                <!-- Content -->
-                                <h5 class="h5 orange-text "><i class="fas fa-paint-brush "></i>Pars colour</h5>
-                                <h2 class="card-title h2 my-4 py-2 ">In Diverse Colours</h2>
-                                <p class="mb-4 pb-2 px-md-5 mx-md-5 ">Years of experience in manufacturing paint colours</p>
-                                <a class="btn peach-gradient btn-rounded " href="/catalog_en"><i class="fas fa-shopping-basket left "></i> View catalog</a>
-
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Jumbotron -->
-                </div>
-                <!-- Card Regular -->
-
-            </section>
-        </div>
-    </main>
-    <!--Footer-->
-    <footer class="page-footer font-small stylish-color-dark ">
+    </section>
+</main>
+<footer class="page-footer font-small stylish-color-dark ">
 
         <!-- Footer Links -->
         <div class="container text-center text-md-left ">
@@ -597,3 +441,5 @@
         <!-- Footer Links -->
 
     </footer>
+</body>
+</html>
