--- a/templates/govashen.html
+++ b/templates/govashen.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 
 <head>
     {% load static %}
@@ -10,80 +10,58 @@
     <link href="{% static 'css/all.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static  'css/custom.css' %}" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
-    <title>Giresh</title>
+    <title>گیرش</title>
 </head>
 
-<body>
+<body style="font-family: 'Vazir FD' ">
     <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.js' %}"></script>
     <script src="{% static 'js/mdb.js' %}"></script>
     <style>
         /* Navigation*/
-        
+
         .scrolling-navbar {
             transition: background .5s ease-in-out, padding .5s ease-in-out;
         }
-        
+
         .top-nav-collapse {
-            background-color: #667490 !important;
+            background-color: #667490!important;
         }
-        
+
         .navbar:not(.top-nav-collapse) {
             background: transparent!important;
         }
-        
+
         footer.page-footer {
-            background-color: #667490;
+            background-color: #667490 !important;
         }
-        
+
         @media only screen and (max-width: 768px) {
             .navbar {
-                background-color: #667490;
+                background-color: #667490 !important;
             }
         }
         /* Necessary for full page carousel*/
-        
+
         html,
         body,
         .view {
             height: 100%;
         }
         /* Carousel*/
-        
+
         .carousel,
         .carousel-item,
         .carousel-item.active {
             height: 100%;
         }
-        
+
         .carousel-inner {
             height: 100%;
         }
-        
-        .carousel-item:nth-child(1) {
-            background-image: url({% static 'img/2.jpg' %});
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-        }
-        
-        .carousel-item:nth-child(2) {
-            background-image: url({% static 'img/3.jpg' %});
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-        }
-        
-        .carousel-item:nth-child(3) {
-            background-image: url({% static 'img/s.jpg' %});
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center center;
-        }
     </style>
-    <!--Navbar-->
-    <nav class="navbar  navbar-expand-lg navbar-dark stylish-color-dark fixed-top scrolling-navbar">
+<nav class="navbar  navbar-expand-lg navbar-dark stylish-color-dark fixed-top scrolling-navbar">
 
 
         <a class="navbar-brand order-md-first" href="#">Giresh</a>
@@ -115,7 +93,7 @@
             <i class="fas fa-globe"> FA</i>
         </a>
     </nav>
-    <div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="modalContactForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header text-center">
@@ -156,11 +134,7 @@
             </div>
         </div>
     </div>
-
-    <!-- Modal For Distribution center -->
-
-
-    <div class="modal fade left" id="fullHeightModalRight" style="float: left ; text-align: left" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade left" id="fullHeightModalRight" style="float: left ; text-align: left" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 
         <!-- Add class .modal-full-height and then add class .modal-right (or other classes from list above) to set a position to the modal -->
         <div class="modal-dialog modal-full-height modal-left" role="document">
@@ -294,7 +268,7 @@
                                 <p class="font-weight-bold text-uppercase py-4" style="color:#007E33">Best of best gathered here</p>
                             </li>
                             <li>
-                               <a href="/govashen " class="btn purple-gradient btn-rounded ">View Products</a>
+                               <a href="/govash " class="btn purple-gradient btn-rounded ">View Products</a>
                             </li>
                         </ul>
                     </div>
@@ -339,159 +313,35 @@
         </a>
         <!--/.Controls-->
     </div>
-    <!--/.Carousel Wrapper-->
-    <main>
-        <div>
-            <section>
-                <h1 class="text-center font-up font-bold mt-5 mb-3 pt-5 wow fadeIn animated heartBeat " data-wow-delay="0.2s">View all products</h1>
+<main>
+    <section>
+        <p>
+Gouaches Pars is the first standard of the Standard National Organization in Iran, which will have an important influence on the creation of the final work and your artistic idea, with its quality of colour.
+        </p>
+        <p>
 
-                <!--Section description-->
-                <p class="text-center font-up pb-5 mb-4 font-bold wow fadeIn" data-wow-delay="0.2s">View our services</p>
-                <div class="row text-center mb-2  px-3 ">
-
-
-                    <div class="col-lg-4 col-md-12 pb-5 wow fadeIn  ">
-                        <!-- Card Wider -->
-                        <div class="card card-cascade" style="max-height: 700px;max-width: 700px;">
-
-                            <!-- Card image -->
-                            <div class="view view-cascade overlay ">
-                                <img class="card-img-top img-responsive " style="max-height: 100%;" src="{% static 'img/ramadan.jpg' %} " alt="Card image cap ">
-                                <a href="#! ">
-                                    <div class="mask rgba-white-slight "></div>
-                                </a>
-
-
-                            </div>
-                            <div class="card-body card-body-cascade text-center ">
-                                <h4 class="card-title "><strong>Ramadan Mubarak</strong></h4>
-                                <!-- Subtitle -->
-
-                                <!-- Text -->
-                                <p class="card-text font-weight-bold  "> Ramadan takes you on a spiritual journey </br> that ends right at the door of Allah </br>where dwells endless mercy and immeasurable happiness.</br> Ramadan Mubarak to you!</p>
-
-
-
-
-
-                            </div>
-
-
-
-                            <!-- Card content -->
-
-                        </div>
-
-                    </div>
-
-
-
-                    <div class="col-lg-4 col-md-12 pb-5 wow fadeIn ">
-                        <!-- Card Wider -->
-                        <div class="card card-cascade " style="max-height: 700px;max-width: 700px; ">
-
-                            <!-- Card image -->
-                            <div class="view view-cascade overlay ">
-                                <img class="card-img-top img-responsive " style="max-height: 100%; " src="{% static 'img/s.jpg' %} " alt="Card image cap ">
-                                <a href="#! ">
-                                    <div class="mask rgba-white-slight "></div>
-                                </a>
-                            </div>
-
-                            <!-- Card content -->
-                            <div class="card-body card-body-cascade text-center ">
-
-                                <!-- Title -->
-                                <div class="card-body card-body-cascade text-center ">
-
-                                    <!-- Title -->
-                                    <h4 class="card-title "><strong>Diverse and best Quality Gouaches</strong></h4>
-                                    <!-- Subtitle -->
-
-                                    <!-- Text -->
-                                    <p class="card-text ">Best quality</p>
-
-                                    <a class="btn blue-gradient btn-rounded " href="/gouacheen">View Products</a>
-
-
-
-
-                                </div>
-
-
-
-
-                            </div>
-
-                        </div>
-                    </div>
-                    <!-- Card Wider -->
-
-                    <!-- Card Narrower -->
-                    <div class="col-lg-4 col-md-12 pb-5 wow fadeIn ">
-                        <!-- Card Wider -->
-                    <div class="card card-cascade " style="max-height: 675px;max-width: 675px;">
-
-                            <!-- Card image -->
-                            <div class="view view-cascade overlay ">
-                                <img class="card-img-top img-responsive " src="{% static 'img/unnamed.jpg' %} " alt="Card image cap ">
-                                <a href="">
-                                    <div class="mask rgba-white-slight "></div>
-                                </a>
-                            </div>
-
-                            <!-- Card content -->
-                            <div class="card-body card-body-cascade text-center ">
-
-                                <!-- Title -->
-
-                                <!-- Title -->
-                                <h4 class="card-title "><strong>Best Quality and Diverse Gouaches</strong></h4>
-                                <!-- Subtitle -->
-
-                                <!-- Text -->
-                                <p class="card-text ">Best quality</p>
-
-                                <a class="btn peach-gradient btn-rounded " href="/aclerycen">View Products</a>
-
-
-
-
-
-                            </div>
-
-                        </div>
-                    </div>
-                    <!-- Card Narrower -->
-
-                    <!-- Card Regular -->
-
-                    <!-- Card Regular -->
-                </div>
-                <div class="container " style="margin-top:5% ; margin-bottom: 5% ">
-                    <!-- Jumbotron -->
-                    <div class="card card-image " style="background-image: url({% static 'img/2.jpg' %}); ">
-                        <div class="text-white text-center rgba-stylish-strong py-5 px-4 ">
-                            <div class="py-5 ">
-
-                                <!-- Content -->
-                                <h5 class="h5 orange-text "><i class="fas fa-paint-brush "></i>Pars colour</h5>
-                                <h2 class="card-title h2 my-4 py-2 ">In Diverse Colours</h2>
-                                <p class="mb-4 pb-2 px-md-5 mx-md-5 ">Years of experience in manufacturing paint colours</p>
-                                <a class="btn peach-gradient btn-rounded " href="/catalog_en"><i class="fas fa-shopping-basket left "></i> View catalog</a>
-
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Jumbotron -->
-                </div>
-                <!-- Card Regular -->
-
-            </section>
-        </div>
-    </main>
-    <!--Footer-->
-    <footer class="page-footer font-small stylish-color-dark ">
+Goache Pars was created using the best pigments and technology of the world's day. The product is in use of the purest pigments pigments with a suitable concentration and uniform and glowing coating, which produces uniform and velvet surface drying after drying.        </p>
+        <p>
+            Goaches Pars was created using the best pigments and technology of the world's day. The product is in use of the purest pigments pigments with a suitable concentration and uniform and glowing coating, which produces uniform and velvet surface drying after drying.
+        </p>
+        <p>
+            Goache Pars with more than 32 colors can be easily combined and produces a range of colored tonalite. Goache Pars does not lose color after mixing, and does not lose color. It is a solution based product and is washed and cleaned with water after drying.
+        </p>
+        <p>
+            Note: It is not easy to dry properly if it is properly closed at normal temperature and is not easily dried in a normal temperature away from direct sunlight, so it can be used for a long time.
+        </p>
+        <p>
+            The pars can be easily used in the airbrush if it is thick with water. The high concentration of the seeds leads to a glowing surface.
+        </p>
+        <p>
+            metallic implants are one of the most attractive and attractive colors of the company. متالیک‌ها include gold, silver, copper, bronze, seashell, and a wide variety of colors include metallic blue, metallic pink, metallic green and …. It is the other product of the company, which in the dark and exposed to ultraviolet light, has the highest brightness and glow in the design of ultraviolet, doll making, Grim and decorative plays
+        </p>
+        <p>
+            In the packs of, 30 miles of pars are included: 6 -12 - 18 colours and higher volumes: 250 miles and 1000 miles and … for high use and a workshop. The combination of colors red and yellow and blue is three main colors, combining the three colors of colors: orange, green, violet, and all colors.
+        </p>
+    </section>
+</main>
+<footer class="page-footer font-small stylish-color-dark ">
 
         <!-- Footer Links -->
         <div class="container text-center text-md-left ">
@@ -597,3 +447,5 @@
         <!-- Footer Links -->
 
     </footer>
+</body>
+</html>
