--- a/templates/aclerycen.html
+++ b/templates/aclerycen.html
@@ -60,6 +60,27 @@
         .carousel-inner {
             height: 100%;
         }
+
+        .carousel-item:nth-child(1) {
+            background-image: url({% static 'img/2.jpg' %});
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+        }
+
+        .carousel-item:nth-child(2) {
+            background-image: url({% static 'img/3.jpg' %});
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+        }
+
+        .carousel-item:nth-child(3) {
+            background-image: url({% static 'img/s.jpg' %});
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center center;
+        }
     </style>
 <nav class="navbar  navbar-expand-lg navbar-dark stylish-color-dark fixed-top scrolling-navbar">
 
