--- a/templates/aclerycen.html
+++ b/templates/aclerycen.html
@@ -10,7 +10,7 @@
     <link href="{% static 'css/all.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static  'css/custom.css' %}" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
-    <title>گیرش</title>
+    <title>Giresh</title>
 </head>
 
 <body style="font-family: 'Vazir FD' ">
@@ -335,7 +335,8 @@
         <!--/.Controls-->
     </div>
 <main>
-    <section>
+    <section class="d-flex justify-content-center" >
+        <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%">
         <p>
 Giresh Company has a 30 years record of the production of artistic colors and produces a complete set of artistic colors required by artists. in order to possess extraordinary quality, Pars products always have the approval and trust of artists in different age groups and different needs.        </p>
         <p>
@@ -353,7 +354,7 @@ Acrylic can be used as well as oil. With the addition of layers and the volume o
         <p>
 The striking point that distinguishes Persia from other competitors is the long - lasting properties and high - colour consistency against atmospheric changes that make the production of artistic colors specific to wall paintings at large surfaces.        </p>
                     <a href="{% static 'img/unnamed.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/unnamed.jpg' %}"></a>
-
+</div>
     </section>
 </main>
 <footer class="page-footer font-small stylish-color-dark ">
