--- a/templates/govashen.html
+++ b/templates/govashen.html
@@ -10,7 +10,7 @@
     <link href="{% static 'css/all.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static  'css/custom.css' %}" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
-    <title>گیرش</title>
+    <title>Giresh</title>
 </head>
 
 <body style="font-family: 'Vazir FD' ">
@@ -335,7 +335,9 @@
         <!--/.Controls-->
     </div>
 <main>
-    <section>
+            <section class="d-flex justify-content-center ">
+                <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%">
+
         <p>
 Gouaches Pars is the first standard of the Standard National Organization in Iran, which will have an important influence on the creation of the final work and your artistic idea, with its quality of colour.
         </p>
@@ -360,7 +362,9 @@ Goache Pars was created using the best pigments and technology of the world's da
         <p>
             In the packs of, 30 miles of pars are included: 6 -12 - 18 colours and higher volumes: 250 miles and 1000 miles and … for high use and a workshop. The combination of colors red and yellow and blue is three main colors, combining the three colors of colors: orange, green, violet, and all colors.
         </p>
-    </section>
+        </div>
+
+            </section>
 </main>
 <footer class="page-footer font-small stylish-color-dark ">
 
