--- a/templates/govashen.html
+++ b/templates/govashen.html
@@ -13,7 +13,7 @@
     <title>Giresh</title>
 </head>
 
-<body style="font-family: 'Vazir FD' ">
+<body>
     <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'js/popper.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.js' %}"></script>
