--- a/templates/govashen.html
+++ b/templates/govashen.html
@@ -357,7 +357,7 @@ Goache Pars was created using the best pigments and technology of the world's da
             The pars can be easily used in the airbrush if it is thick with water. The high concentration of the seeds leads to a glowing surface.
         </p>
         <p>
-            metallic implants are one of the most attractive and attractive colors of the company. متالیک‌ها include gold, silver, copper, bronze, seashell, and a wide variety of colors include metallic blue, metallic pink, metallic green and …. It is the other product of the company, which in the dark and exposed to ultraviolet light, has the highest brightness and glow in the design of ultraviolet, doll making, Grim and decorative plays
+            metallic implants are one of the most attractive and attractive colors of the company. Metallics include gold, silver, copper, bronze, seashell, and a wide variety of colors include metallic blue, metallic pink, metallic green and …. It is the other product of the company, which in the dark and exposed to ultraviolet light, has the highest brightness and glow in the design of ultraviolet, doll making, Grim and decorative plays
         </p>
         <p>
             In the packs of, 30 miles of pars are included: 6 -12 - 18 colours and higher volumes: 250 miles and 1000 miles and … for high use and a workshop. The combination of colors red and yellow and blue is three main colors, combining the three colors of colors: orange, green, violet, and all colors.
