--- a/templates/aclerycen.html
+++ b/templates/aclerycen.html
@@ -243,95 +243,20 @@
     <!--/.Navbar-->
 
     <!--Carousel Wrapper-->
-    <div id="carousel-example-1" class="carousel slide carousel-fade" data-ride="carousel" data-interval="5000">
+    <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url({% static 'img/s.jpg' %}); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+            <div class="mask rgba-stylish-light">
+                <div class="container h-100 d-flex justify-content-center align-items-center">
+                    <div class="row pt-5 mt-3">
+                        <div class="col-md-12 mb-3">
+                            <div class="intro-info-content text-center">
+                                <h1 class="display-3 white-text mb-5 wow fadeInDown" data-wow-delay="0.3s"> <a class="yellow-text font-weight-bold"> Catalogs</a></h1>
 
-        <!--Indicators-->
-        <ol class="carousel-indicators">
-            <li data-target="#carousel-example-1" data-slide-to="1"  class="active"></li>
-        </ol>
-        <!--/.Indicators-->
-
-        <!--Slides-->
-        <div class="carousel-inner" role="listbox">
-
-            <!--First slide-->
-            <div class="carousel-item active">
-                <!--Mask-->
-                <div class="view">
-                    <div class="full-bg-img flex-center mask rgba-indigo-light white-text">
-                        <ul class="animated fadeInUp col-md-12 list-unstyled list-inline">
-                            <li>
-                                <h1 class="font-weight-bold  text-uppercase " style="color: #ffff00">Giresh Company</h1>
-                            </li>
-                            <li>
-                                <p class="font-weight-bold text-uppercase py-4">High quality and Diverse Colours</p>
-                            </li>
-
-                        </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <!--/.Mask-->
             </div>
-            <!--/.First slide-->
-
-            <!--Second slide -->
-            <div class="carousel-item">
-                <!--Mask-->
-                <div class="view">
-                    <div class="full-bg-img flex-center mask rgba-purple-light white-text">
-                        <ul class="animated fadeInUp col-md-12 list-unstyled">
-                            <li>
-                                <h1 class="font-weight-bold text-uppercase" style="color: #007E33">High quality products is your right</h1>
-                            </li>
-                            <li>
-                                <p class="font-weight-bold text-uppercase py-4" style="color:#007E33">Best of best gathered here</p>
-                            </li>
-                            <li>
-                               <a href="/govash " class="btn purple-gradient btn-rounded ">View Products</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/.Mask-->
-            </div>
-            <!--/.Second slide -->
-
-            <!--Third slide-->
-            <div class="carousel-item">
-                <!--Mask-->
-                <div class="view">
-                    <div class="full-bg-img flex-center mask rgba-blue-light white-text">
-                        <ul class="animated fadeInUp col-md-12 list-unstyled">
-                            <li>
-                                <h1 class="font-weight-bold text-uppercase" style="color: #0288d1">Learn more about us</h1>
-                            </li>
-                            <li>
-                                <p class="font-weight-bold text-uppercase py-4" style="color: #0288d1">Ask any question and we will answer in a little time</p>
-                            </li>
-                            <li>
-                                <a href="#" class="btn btn-lg btn-indigo btn-rounded" data-toggle="modal" data-target="#modalContactForm">Support team</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!--/.Mask-->
-            </div>
-            <!--/.Third slide-->
-
         </div>
-        <!--/.Slides-->
-
-        <!--Controls-->
-        <a class="carousel-control-prev" href="#carousel-example-1" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carousel-example-1" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-        <!--/.Controls-->
-    </div>
 <main>
     <section class="d-flex justify-content-center" >
         <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%">
