--- a/templates/aclerycen.html
+++ b/templates/aclerycen.html
@@ -249,7 +249,7 @@
                     <div class="row pt-5 mt-3">
                         <div class="col-md-12 mb-3">
                             <div class="intro-info-content text-center">
-                                <h1 class="display-3 white-text mb-5 wow fadeInDown" data-wow-delay="0.3s"> <a class="yellow-text font-weight-bold"> Catalogs</a></h1>
+                                <h1 class="display-3 white-text mb-5 wow fadeInDown" data-wow-delay="0.3s"> <a class="yellow-text font-weight-bold"> Aclerycs</a></h1>
 
                             </div>
                         </div>
