--- a/templates/catalogen.html
+++ b/templates/catalogen.html
@@ -10,7 +10,7 @@
     <link href="{% static 'css/all.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static  'css/custom.css' %}" rel="stylesheet" type="text/css">
     <meta charset="UTF-8">
-    <title>گیرش</title>
+    <title>Giresh</title>
 </head>
 
 <body>
