--- a/templates/aclerycen.html
+++ b/templates/aclerycen.html
@@ -270,7 +270,7 @@ Very high resistance to light, pure pigments and colour stability, dominance, hi
         <p>
 It is possible to put different layers of color together without compromising the existence of layers of color. It affects all types of surfaces such as: canvas, cardboard, fabric, wood, pottery, pottery, and provides a range of visual effects        </p>
         <p>
-Acrylic can be used as well as oil. With the addition of layers and the volume of color in the next step, we created the large and prominent surfaces. پارس acrylic packaging includes: 6 - 12 - 24 packets in the volume 21 mils of packets 6 and 12 in volume of 37 / 75 mils and 200 individual mils and 500 mils per volume.        </p>
+Acrylic can be used as well as oil. With the addition of layers and the volume of color in the next step, we created the large and prominent surfaces. Pars acrylic packaging includes: 6 - 12 - 24 packets in the volume 21 mils of packets 6 and 12 in volume of 37 / 75 mils and 200 individual mils and 500 mils per volume.        </p>
         <p>
             The pars can be easily used in the airbrush if it is thick with water. The high concentration of the seeds leads to a glowing surface.
         </p>
