edit govash page

--- a/templates/govash.html
+++ b/templates/govash.html
@@ -261,7 +261,7 @@
                 <div style="width: 50% ; margin-top: 5% ; margin-bottom: 5%">
 
                     <p style="text-align:right;float:right">گواش پارس اولین گواش دارای استاندارد از سازمان ملی استاندارد در ایران است که با کیفیت واعجاز رنگی خود تاثیر مهمی در خلق اثر نهایی و ایده هنری شما خواهد داشت</p>
-                    <p style="text-align:right;float:right">گواش پارس با استفاده از بهترین پیکمنتها و تکنولوژی روز دنیا ساخته شده.این محصول با بکارگیری خالصترین رنگدانه ها داری رنگی با غلظت مناسب و پوشش یکدست و درخشان می باشد که پس از خشک شدن سطحی یکنواخت و مخملی را بوجود می آورد .</p>
+                    <p style="text-align:right;float:right">گواش پارس با استفاده از بهترین پیگمنتها و تکنولوژی روز دنیا ساخته شده.این محصول با بکارگیری خالصترین رنگدانه ها داری رنگی با غلظت مناسب و پوشش یکدست و درخشان می باشد که پس از خشک شدن سطحی یکنواخت و مخملی را بوجود می آورد .</p>
                     <p style="text-align:right;float:right">کار با گواش پارس بسیار لذت بخش بوده و درخشش، ترکیب و چسبندگی آن قابلیت اجراء بر روی سطوح مختلف از جمله مقوا، بوم, سفال، پاپیه ماشه ، چوب، گچ و...را دارد.</p>
                     <p style="text-align:right;float:right">گواش پارس با بیش از ٣٢ رنگ به راحتی قابل ترکیب بوده و طیف وسیعی از تونالیته های رنگی را بوجود می آورد. گواش پارس پس از ترکیب، مات و خلوص رنگی خود را از دست نمی دهد.این محصول حلال در آب بوده و پس از خشک شدن به راحتی با آب شسته و پاک
                         می شود .</p>
