--- a/templates/aclerycen.html
+++ b/templates/aclerycen.html
@@ -277,6 +277,13 @@ Acrylic can be used as well as oil. With the addition of layers and the volume o
         <p>
 The striking point that distinguishes Persia from other competitors is the long - lasting properties and high - colour consistency against atmospheric changes that make the production of artistic colors specific to wall paintings at large surfaces.        </p>
                     <a href="{% static 'img/unnamed.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/unnamed.jpg' %}"></a>
+                                <a href="{% static 'img/img2301.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/img2301.jpg' %}"></a>
+                                <a href="{% static 'img/IMG_4922.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/IMG_4922.JPG' %}"></a>
+                                <a href="{% static 'img/IMG_4374.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/IMG_4374.JPG' %}"></a>
+                                <a href="{% static 'img/IMG_3960_Reduced.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/IMG_3960_Reduced.jpg' %}"></a>
+                                <a href="{% static 'img/FullSizeRender.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/FullSizeRender.jpg' %}"></a>
+
+
 </div>
     </section>
 </main>
