--- a/templates/acleryc.html
+++ b/templates/acleryc.html
@@ -273,7 +273,11 @@
                         6 و 12 در حجم 37 میل و اندازهای 75 میل و 200 تکی 250 میل و 500 میل و 1000 میل موجود می باشد.</p>
                     <p style="float: right;text-align:right">نکته قابل توجه که اکریلیک پارس را از دیگر رقبا متمایز می کند خصوصیات ماندگاری و ثبات رنگی بالا در برابر تغییرات جوی بوده که باعث تولید رنگهای هنری مختص نقاشیهای دیواری در سطوح بزرگ را شامل می شود. </p>
                     <a href="{% static 'img/unnamed.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/unnamed.jpg' %}"></a>
-
+ <a href="{% static 'img/img2301.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/img2301.jpg' %}"></a>
+                                <a href="{% static 'img/IMG_4922.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/IMG_4922.JPG' %}"></a>
+                                <a href="{% static 'img/IMG_4374.JPG' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/IMG_4374.JPG' %}"></a>
+                                <a href="{% static 'img/IMG_3960_Reduced.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/IMG_3960_Reduced.jpg' %}"></a>
+                                <a href="{% static 'img/FullSizeRender.jpg' %}" target="_blank"> <img class="img-fluid z-depth-5  rounded" src="{% static 'img/FullSizeRender.jpg' %}"></a>
 
 
 
